<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:gravity="center"
            android:textSize="@dimen/text_size_big"
            android:textColor="@color/text_color"
            android:text="@string/tutorial_text_2_1"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/drawable_circle2"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/tutorial_text_2_2"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="@dimen/text_size_big"
            android:textColor="@color/text_color"
            android:text="@string/tutorial_text_2_3"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="220dp"
            android:layout_height="228dp"
            android:layout_marginTop="60dp"
            app:srcCompat="@mipmap/bg_tutorial_2"/>
</LinearLayout>
