<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allow_notification"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_normal" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:track="@drawable/track_selector"
            android:thumb="@drawable/thumb_selector"
            app:theme="@style/switchStyle"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_recurrently_interval_between_notifications"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_normal" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sInterval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:track="@drawable/track_selector"
            android:thumb="@drawable/thumb_selector"
            app:theme="@style/switchStyle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/verticalStrLayout"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/verticalStr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_marginBottom="0dp"
            android:paddingBottom="0dp"
            android:background="@android:color/white"
            android:text="120分钟"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRadio"
        android:layout_width="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@android:color/white"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/interv_sub"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:orientation="horizontal"
            app:srcCompat="@mipmap/ic_sub" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seeBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:max="60"
                android:min="5" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/interval_add"
            android:layout_width="15dp"
            android:layout_height="15dp"
            app:srcCompat="@mipmap/ic_add" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_when_battery_needs_to_be_recharged"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_normal" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sBattery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:track="@drawable/track_selector"
            android:thumb="@drawable/thumb_selector"
            app:theme="@style/switchStyle"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_when_urinary_volume_exceeds_the_notification_threshold"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_normal" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sUrinary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:track="@drawable/track_selector"
            android:thumb="@drawable/thumb_selector"
            app:theme="@style/switchStyle" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_when_urinary_volume_does_not_change_over_time"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_normal" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:track="@drawable/track_selector"
            android:thumb="@drawable/thumb_selector"
            app:theme="@style/switchStyle" />
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color"/>

</LinearLayout>
